backport: re PR c++/28217 (ICE in tree_int_cst_sgn)

Backported from mainline
	2006-07-12  Jason Merrill  <jason@redhat.com>
	PR c++/28217
	* semantics.c (note_decl_for_pch): Don't premangle templates.

	* g++.dg/pch/template-1.C: New test.
	* g++.dg/pch/template-1.Hs: New file.

From-SVN: r120412